--- a/.github/workflows/update-cask-on-release.yml
+++ b/.github/workflows/update-cask-on-release.yml
@@ -15,6 +15,20 @@ on:
         required: true
         type: string
         description: "URL to DMG file"
+  workflow_dispatch:
+    inputs:
+      project:
+        required: true
+        type: string
+        description: "Project name (sam, etc.)"
+      version:
+        required: true
+        type: string
+        description: "Release version tag"
+      download_url:
+        required: true
+        type: string
+        description: "URL to DMG file"
 
 jobs:
   update-cask:
