fix(ci): add CLIO_HOME env var and fix absolute paths in workflows
Problem: CLIO Docker container PathResolver could enter 'development mode'
and look for auth tokens in wrong directory (/opt/clio/.clio instead of
/root/.clio). Also, absolute /workspace/ paths in prompts are unnecessary
since working directory is already /workspace.

Solution:
- Add CLIO_HOME=/root/.clio to docker run in all workflows
- Change /workspace/*.json paths to relative *.json in workflows and prompts

Related: SyntheticAutonomicMind/CLIO#8

--- a/.github/workflows/issue-triage.yml
+++ b/.github/workflows/issue-triage.yml
@@ -114,11 +114,11 @@ jobs:
           1. Read .github/clio-prompts/issue-triage.md for instructions
           2. Read ISSUE_INFO.md and ISSUE_BODY.md for issue details
           3. Read ISSUE_COMMENTS.md if there are comments
-          4. WRITE your triage JSON to /workspace/triage.json using file_operations
+          4. WRITE your triage JSON to triage.json using file_operations
 
           CRITICAL: 
           - DO NOT use user_collaboration (it will hang forever)
-          - Write JSON to /workspace/triage.json using file_operations create_file"
+          - Write JSON to triage.json using file_operations create_file"
           
           echo "=== Starting CLIO Issue Triage ==="
           
@@ -126,6 +126,7 @@ jobs:
             -v "/tmp/clio-workspace":/workspace:rw \
             -v "/tmp/clio-config":/root/.clio:rw \
             -w /workspace \
+            -e CLIO_HOME=/root/.clio \
             -e CLIO_LOG_LEVEL=WARNING \
             -e GH_TOKEN="${GH_TOKEN}" \
             ghcr.io/syntheticautonomicmind/clio:latest \
